hack fix for header spacing in IE7

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -426,6 +426,7 @@ form, fieldset {
     z-index: 1;
 }
 .page-map #main .holder { height: 3000px; }
+.page-map #main .main-top .holder {height: auto;}
 #main .holder:after {
     clear: both;
     content: "";
